--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
             <!-- Right side: Job details -->
             <div class="experience-content">
-                <h3>Summer Student Inter · Orangeville Family Medical Centre <a href="#" target="_blank">↗</a></h3>
+                <h3>Summer Student Intern · Orangeville Family Medical Centre <a href="#" target="_blank">↗</a></h3>
                 <p>BResponsible for hardware set up, data management and office network solutions. Developed a working 
                     knowledge of PS Suite EMR.</p>
                 <div class="skills">
@@ -132,7 +132,7 @@
             </div>
             
             <div class="experience-content">
-                <h3>Tnterim Research Analyst · Info-Tech Research Group <a href="https://www.infotech.com/" target="_blank">↗</a></h3>
+                <h3>Interim Research Analyst · Info-Tech Research Group <a href="https://www.infotech.com/" target="_blank">↗</a></h3>
                 <p>Developed user-friendly interfaces and collaborated with teams to improve product usability. Focused on building 
                     responsive web applications and enhancing the user experience.</p>
                 <div class="skills">
