Added in free cell project

--- a/index.html
+++ b/index.html
@@ -168,6 +168,23 @@
                 </div>
             </div>
         </a>
+
+        <a href="https://github.com/mjosephson7/freeCellSolver" target="_blank" class="project-link">
+            <div class="experience">
+                <div class="project-content">
+                    <h3 style="color: white;"">Free Cell Solitare Solver <a</a></h3>
+                    <p> Free Cell Solitare Solver, using an depth first search model to 
+                        solve. The program allows for you to put a preset deck of cards 
+                        into the program, or you can drag and drop in the GUI.
+                    </p>
+                    <div class="skills">
+                        <span class="skill">Python</span>
+                        <span class="skill">AI Model</span>
+                        <span class="skill">GUI</span>
+                    </div>
+                </div>
+            </div>
+        </a>
     
     </section>
 
