Added in web wordle project

--- a/index.html
+++ b/index.html
@@ -169,6 +169,26 @@
             </div>
         </a>
 
+        <a href="https://github.com/mjosephson7/WebWordleGame" target="_blank" class="project-link">
+            <div class="experience">
+                <div class="project-content">
+                    <h3 style="color: white;"">Web Wordle Game <a</a></h3>
+                    <p> A C++ based web browser WebWordle game, inspired by the popular New York Times Wordle Game.
+                        In this game, players have six attempts to guess a five-letter word. After each guess, tiles 
+                        change color to indicate accuracy: green for a correct letter in the right position, yellow 
+                        for a correct letter in the wrong position, and gray for an incorrect letter. Players win by 
+                        guessing the word within six tries; otherwise, the correct word is revealed. WebWordle is accessible 
+                        in any modern web browser.
+                    </p>
+                    <div class="skills">
+                        <span class="skill">C++</span>
+                        <span class="skill">WT</span>
+                        <span class="skill">Servers</span>
+                    </div>
+                </div>
+            </div>
+        </a>
+
         <a href="https://github.com/mjosephson7/freeCellSolver" target="_blank" class="project-link">
             <div class="experience">
                 <div class="project-content">
