updated skill for ios run tracker

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                             <div class="skills">
                                                 <span class="skill">Swift</span>
                                                 <span class="skill">Location Tracking</span>
-                                                <span class="skill">Interface Design</span>
+                                                <span class="skill">UI/UX Design</span>
                                             </div>
                                         </div>
                                     </div>
