--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         <link rel="stylesheet" href="assets/css/styles.css">
         <script src="assets/js/script.js"></script>
 
-        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+
+        <!-- <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">-->
+        
+
+        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="assets/img/favicon-dark.ico"type="image/x-icon" media="(prefers-color-scheme: dark)">
+
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
