--- a/projects/index.html
+++ b/projects/index.html
@@ -353,14 +353,14 @@
         <div class="project-card">
           <div class="project-header">
             <div class="project-info">
-              <div class="project-name">LOAK</div>
-              <div class="project-type">PHP Application</div>
+              <div class="project-name">Circle Game</div>
+              <div class="project-type">HTML Web Application</div>
             </div>
-            <div class="project-icon">🔐</div>
+            <div class="project-icon">🔴</div>
           </div>
           <div class="project-file">
             <span class="file-icon">📄</span>
-            <span>index.php</span>
+            <span>index.html</span>
           </div>
           <div class="project-actions">
             <a href="firstGame/index.html" class="project-link">
