Integrated Cloud Firestore Database
Integrated Cloud Firestore Database to add and show live scores with all users that visit the site.

Updated main website info.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                                         <div class="gapSmall"></div>
                                         <h2>About Me</h2>
                                         <p>
-                                            I am a Computer Science student in my final year at Western University, with a minor in Classical Studies. 
+                                            I am a Master of Science in Management, with a specialization in Digital Management 
+                                            candididate at the Ivey Business School at Western University.
+                                            I graduated from Computer Science with a Minor in Classical Studies at Western University in 2025. 
                                             I have a strong interest in iOS app development and experience as a full-stack developer. 
                                             My technical skills include Python, Java, Swift, C, HTML, and graphic design, along with 
                                             beginner-level mobile app development. I'm passionate about combining technology with creativity 
