Added OFMC Website Beta

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -337,7 +337,7 @@
           </div>
         </div>
         <div class="header-stats">
-          <div style="font-size: 1.25rem; font-weight: 600;">1</div>
+          <div style="font-size: 1.25rem; font-weight: 600;">2</div>
           <div style="font-size: 0.875rem; opacity: 0.8;">Active Projects</div>
         </div>
       </div>
@@ -369,13 +369,13 @@
             </a>
           </div>
         </div>
-<!--  
+
 
         <div class="project-card">
           <div class="project-header">
             <div class="project-info">
-              <div class="project-name">AI TA</div>
-              <div class="project-type">Web Application</div>
+              <div class="project-name">OFMC Website</div>
+              <div class="project-type">Client Website</div>
             </div>
             <div class="project-icon">🤖</div>
           </div>
@@ -384,12 +384,14 @@
             <span>index.html</span>
           </div>
           <div class="project-actions">
-            <a href="ai-ta/index.html" class="project-link">
+            <a href="ofmcWebsite/index.html" class="project-link">
               <span>Open Project</span>
               <span class="arrow-icon">→</span>
             </a>
           </div>
         </div>
+
+<!--  
 
         <div class="project-card">
           <div class="project-header">
