--- a/projects/firstGame/index.html
+++ b/projects/firstGame/index.html
@@ -477,33 +477,43 @@
         date: new Date().toISOString()
     };
 
-    // Save to Firebase Firestore
-    db.collection("scores").add(newScore)
-        .then(() => {
-            showError('Score saved successfully!', '#2ed573');
-            document.getElementById('nameInputSection').style.display = 'none';
-            loadHighScores();
-        })
-        .catch((error) => {
-            showError("Error saving score: " + error.message);
-        });
+    // Save to Firebase Firestore (if available)
+    if (window.db) {
+        db.collection("scores").add(newScore)
+            .then(() => {
+                showError('Score saved successfully!', '#2ed573');
+                document.getElementById('nameInputSection').style.display = 'none';
+                loadHighScores();
+            })
+            .catch((error) => {
+                showError("Error saving score: " + error.message);
+            });
+    } else {
+        showError('Database not available. Score not saved.', '#ff4757');
+    }
 }
 
 function loadHighScores() {
-    db.collection("scores")
-      .orderBy("score", "desc")
-      .limit(10)
-      .get()
-      .then((querySnapshot) => {
-        gameState.highScores = [];
-        querySnapshot.forEach((doc) => {
-            gameState.highScores.push(doc.data());
-        });
+    if (window.db) {
+        db.collection("scores")
+          .orderBy("score", "desc")
+          .limit(10)
+          .get()
+          .then((querySnapshot) => {
+            gameState.highScores = [];
+            querySnapshot.forEach((doc) => {
+                gameState.highScores.push(doc.data());
+            });
+            updateHighScoreDisplay();
+          })
+          .catch((error) => {
+            console.error("Error loading scores: ", error);
+            updateHighScoreDisplay();
+          });
+    } else {
+        console.warn("Database not available. High scores disabled.");
         updateHighScoreDisplay();
-      })
-      .catch((error) => {
-        console.error("Error loading scores: ", error);
-      });
+    }
 }
 
 
@@ -855,21 +865,19 @@ function loadHighScores() {
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
 
+    <!-- Load Firebase config from external file -->
+    <script src="config.js"></script>
+    
     <script>
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-        apiKey: "AIzaSyC-V2EFdyr_6pBPZMV4ueTdOCzcXvbNa2I",
-        authDomain: "circlegame-c4013.firebaseapp.com",
-        projectId: "circlegame-c4013",
-        storageBucket: "circlegame-c4013.firebasestorage.app",
-        messagingSenderId: "1001062250382",
-        appId: "1:1001062250382:web:b19cedf327f40c11d356df",
-        measurementId: "G-DT8YNQZDEZ"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    // Initialize Firebase with config from external file
+    if (window.firebaseConfig) {
+        firebase.initializeApp(window.firebaseConfig);
+        window.db = firebase.firestore();
+    } else {
+        console.error('Firebase config not found! Please create config.js file.');
+        // Fallback: disable online features
+        window.db = null;
+    }
     </script>
 
 <script>
